fixed hover issue on mobile, added little animation for work in progress button. Also fixed grammar mistake

--- a/public/_general.scss
+++ b/public/_general.scss
@@ -1,3 +1,23 @@
+* {
+  -webkit-tap-highlight-color: transparent;
+}
+
+@keyframes vibrate {
+  0% { transform: translateX(-2px); }
+  25% { transform: translateX(2px); }
+  50% { transform: translateX(-2px); }
+  75% { transform: translateX(2px); }
+  100% { transform: translateX(0); }
+}
+
+.work:active {
+    p {
+        animation: vibrate 0.2s linear; 
+    }
+}
+
+
+
 section {
     display: grid; 
     margin: 30px;
@@ -39,7 +59,13 @@ p {
             margin: 10px;
         }
     }
-    &:hover {
+    &:hover-visible {
+        .button {
+            bottom: 2px;
+            right: 2px;
+        }
+    }
+    &:active {
         .button {
             bottom: 2px;
             right: 2px;
